@@ -3,82 +3,85 @@ package com.example.todo.controller;
 import com.example.todo.dto.ResponseDTO;
 import com.example.todo.dto.TodoDTO;
 import com.example.todo.model.TodoEntity;
+import com.example.todo.security.UserDetailsImpl;
 import com.example.todo.service.TodoService;
+import java.util.List;
+import java.util.Optional;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
-import org.springframework.web.bind.annotation.*;
-
-import java.util.List;
-import java.util.stream.Collectors;
+import org.springframework.web.bind.annotation.DeleteMapping;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 
 @Slf4j
-@CrossOrigin(origins="*")
 @RestController
-@RequestMapping("todo")
+@RequiredArgsConstructor
+@RequestMapping("/todo")
 public class TodoController {
-    @Autowired
-    private TodoService service;
+
+    private final TodoService service;
 
     @PostMapping
-    public ResponseEntity<?> createTodo(@AuthenticationPrincipal String userId, @RequestBody TodoDTO dto) {
-        try {
+    public ResponseEntity<?> createTodo(@AuthenticationPrincipal UserDetailsImpl userDetails, @RequestBody TodoDTO dto){
+        try{
             TodoEntity entity = TodoDTO.toEntity(dto);
             entity.setId(null);
-            entity.setUserId(userId);
+            entity.setUserId(userDetails.getUser().getId());
 
-            List<TodoEntity> entities = service.create(entity);
-
-            List<TodoDTO> dtos = entities.stream().map(TodoDTO::new).collect(Collectors.toList());
-            log.info("Log:entities => dtos OK!");
-
+            Optional<TodoEntity> entities = service.create(entity);
+            List<TodoDTO> dtos = entities.stream().map(TodoDTO::new).toList();
             ResponseDTO<TodoDTO> response = ResponseDTO.<TodoDTO>builder().data(dtos).build();
-            log.info("Log:responsedto OK!");
 
             return ResponseEntity.ok().body(response);
-        } catch (Exception e) {
+        } catch (Exception e){
             String error = e.getMessage();
             ResponseDTO<TodoDTO> response = ResponseDTO.<TodoDTO>builder().error(error).build();
             return ResponseEntity.badRequest().body(response);
         }
     }
+
     @GetMapping
-    public ResponseEntity<?> retrieveTodo(@AuthenticationPrincipal String userId) {
-        List<TodoEntity> entities = service.retrieve(userId);
-        List<TodoDTO> dtos = entities.stream().map(TodoDTO::new).collect(Collectors.toList());
+    public ResponseEntity<?> retrieveTodo(@AuthenticationPrincipal UserDetailsImpl userDetails){
+        List<TodoEntity> entities = service.retrieve(userDetails.getUser().getId());
+        List<TodoDTO> dtos = entities.stream().map(TodoDTO::new).toList();
         ResponseDTO<TodoDTO> response = ResponseDTO.<TodoDTO>builder().data(dtos).build();
         return ResponseEntity.ok().body(response);
     }
-    @PutMapping
-    public ResponseEntity<?> updateTodo(@AuthenticationPrincipal String userId, @RequestBody TodoDTO dto) {
-        try {
-            TodoEntity entity = TodoDTO.toEntity(dto);
-            entity.setUserId(userId);
 
-            List<TodoEntity> entities = service.update(entity);
-            List<TodoDTO> dtos = entities.stream().map(TodoDTO::new).collect(Collectors.toList());
+    @PutMapping
+    public ResponseEntity<?> updateTodo(@AuthenticationPrincipal UserDetailsImpl userDetails, @RequestBody TodoDTO dto){
+        try{
+            TodoEntity entity = TodoDTO.toEntity(dto);
+            entity.setUserId(userDetails.getUser().getId());
+            Optional<TodoEntity> entities = service.updateTodo(entity);
+            List<TodoDTO> dtos = entities.stream().map(TodoDTO::new).toList();
             ResponseDTO<TodoDTO> response = ResponseDTO.<TodoDTO>builder().data(dtos).build();
             return ResponseEntity.ok().body(response);
-        } catch (Exception e) {
+        } catch (Exception e){
             String error = e.getMessage();
             ResponseDTO<TodoDTO> response = ResponseDTO.<TodoDTO>builder().error(error).build();
             return ResponseEntity.badRequest().body(response);
         }
     }
-    @DeleteMapping
-    public ResponseEntity<?> deleteTodo(@AuthenticationPrincipal String userId, @RequestBody TodoDTO dto) {
-        try {
-            TodoEntity entity = TodoDTO.toEntity(dto);
-            entity.setUserId(userId);
 
+    @DeleteMapping
+    public ResponseEntity<?> delete(@AuthenticationPrincipal UserDetailsImpl userDetails, @RequestBody TodoDTO dto){
+        try{
+            TodoEntity entity = TodoDTO.toEntity(dto);
+            entity.setUserId(userDetails.getUser().getId());
             List<TodoEntity> entities = service.delete(entity);
-            List<TodoDTO> dtos = entities.stream().map(TodoDTO::new).collect(Collectors.toList());
+            List<TodoDTO> dtos = entities.stream().map(TodoDTO::new).toList();
             ResponseDTO<TodoDTO> response = ResponseDTO.<TodoDTO>builder().data(dtos).build();
             return ResponseEntity.ok().body(response);
-        } catch (Exception e) {
+        } catch (Exception e){
             String error = e.getMessage();
-            ResponseDTO<TodoDTO> response = ResponseDTO.<TodoDTO>builder().error(error).build();
+            ResponseDTO<String> response = ResponseDTO.<String>builder().error(error).build();
             return ResponseEntity.badRequest().body(response);
         }
     }
